# oasis

./: Makefile  README.md  dune-project  oasis.opam  test.txt
.github/workflows/: ci.yml
docs/: db.js  dune  index.html  oasis.mld  sherlodoc.js  theme.css
docs/module/: db.js  index.html
docs/module/Oasis/: index.html
docs/module/Oasis/Builtins/: index.html
docs/module/Oasis/Builtins/Complex/: index.html
docs/module/Oasis/Builtins/Dict/: index.html
docs/module/Oasis/Builtins/Map/: index.html
docs/module/Oasis/Collections/: index.html
docs/module/Oasis/Collections/Counter/: index.html
docs/module/Oasis/Collections/FloatOT/: index.html
docs/module/Oasis/Collections/Heap/: index.html
docs/module/Oasis/Collections/IntOT/: index.html
docs/module/Oasis/Collections/StringOT/: index.html
docs/module/Oasis/Collections/module-type-Heap_t/: index.html
docs/module/Oasis/Logging/: index.html
docs/module/Oasis/String/: index.html
docs/odoc.support/: odoc.css  odoc_search.js
lib/: builtins.ml  collections.ml  dune  logging.ml  string.ml
test/: builtins_test.ml  collections_test.ml  dune  string_test.ml  test.ml
